--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wear-edu-app",
+  "name": "archlab",
   "version": "1.0.0",
   "description": "Interactive educational platform for smartwatch engineering",
   "type": "module",
@@ -35,6 +35,6 @@
     "engineering",
     "react"
   ],
-  "author": "Your Name",
+  "author": "YoussefReda",
   "license": "MIT"
 }
